--- a/prac5/src/main/resources/templates/vista/dashboard.html
+++ b/prac5/src/main/resources/templates/vista/dashboard.html
@@ -41,16 +41,68 @@
     </div>
 
     <div class="container">
-        <h1 class="text-center">Ventas Realizadas</h1>
         <div class="row">
-            <div class="col-md-12">
-                <canvas id="myPieChart"></canvas>
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">
+                        Ventas por producto
+                    </div>
+                    <div class="card-body">
+                        <canvas id="myPieChart"></canvas>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <script th:inline="javascript" src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script th:inline="javascript" src="@{/webjars/chartjs/Chart.min.js}"></script>
-    <script th:inline="javascript" src="@{/js/piechart.js}"></script>
+    <!-- Incluye los recursos de Chart.js y Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/esm/popper-lite.min.js"></script>
+
+    <!-- Incluye tu archivo JS personalizado -->
+<!--    <script src="/js/configPieChart.js"></script>-->
+
+    <script th:inline="javascript">
+        $(function () {
+            var ctx = document.getElementById('myPieChart').getContext('2d');
+            var myPieChart = new Chart(ctx, {
+                type: 'pie',
+                data: {
+                    labels: /*[[${labels}]]*/,
+                    datasets: [{
+                        label: "Ventas por producto",
+                        data: /*[[${data}]]*/,
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)'
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            position: 'bottom',
+                        },
+                        title: {
+                            display: true,
+                            text: 'Ventas por producto'
+                        }
+                    }
+                }
+            });
+        });
+    </script>
 </body>
 </html>
