--- a/final/src/main/resources/templates/vista/index.html
+++ b/final/src/main/resources/templates/vista/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>LinkZip</title>
+    <title th:text="${titulo}">Titulo por defecto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <header class="p-3 text-bg">
+        <div class="container-fluid">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <!--                <a href="/" class="d-flex align-items-left mb-2 mb-lg-0 text-white text-decoration-none">-->
+                <!--&lt;!&ndash;                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>&ndash;&gt;-->
+                <!--                    <img src="/publico/logo-invertido.png" alt="Logo-QuickBuy">-->
+                <!--                </a>-->
+                <img src="/images/Logo-with-White.png" alt="logo-LinkZip" class="logo">
+
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="/" class="nav-link px-4 text-warning">Comprar</a></li>
+                    <li><a href="/Ventas" class="nav-link px-4 text-white">Ventas Realizadas</a></li>
+                    <li><a href="/Seguridad/Productos" class="nav-link px-4 text-white">Administrar Productos</a></li>
+                    <li><a href="/carritoCompras" class="nav-link px-4 text-white">Carrito (<span th:text="${cantidadProdCarrito}"></span>)</a></li>
+                </ul>
+
+                <div class="text-end ml-3">
+
+                    <div th:if="${session.usuario == null}">
+                        <a href="/login" class="btn btn-outline-light me-2">Iniciar sesion</a>
+                        <a href="/registrar" class="btn btn-warning">Registrar</a>
+                    </div>
+
+                    <div th:if="${session.usuario != null}">
+                        <span th:text="${session.usuario.usuario}" class="ml-10"></span>
+                        <a href="/logout" class="btn btn-outline-danger mr-10">Logout</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="container">
+
+    </div>
 
 </body>
 </html>
