--- a/final/src/main/resources/publico/css/estilo.css
+++ b/final/src/main/resources/publico/css/estilo.css
@@ -5,12 +5,14 @@ body, button, a, h1, h2{
 
 header{
     background-color: #272836;
+    padding: 10px;
 }
 
 footer{
     background-color: #272836;
     color: white;
     position: relative;
+    padding: 10px;
 }
 
 .image-container{
@@ -23,9 +25,13 @@ footer{
 .image-container img{
     max-width: 45px;
     height: auto;
+    margin-right: 10px;
 }
 
 .logo{
     max-width: 90px;
     min-height: 31px;
 }
+
+
+
