implementacion servicio de registro e inicio de sesion

--- a/final/src/main/resources/publico/css/estilo.css
+++ b/final/src/main/resources/publico/css/estilo.css
@@ -8,6 +8,15 @@ header{
     padding: 10px;
 }
 
+header span{
+    color: white;
+}
+
+.container-usuario{
+    margin-right: 10px;
+    padding: 10px;
+}
+
 footer{
     background-color: #272836;
     color: white;
