ligeros cambios visuales

--- a/final/src/main/resources/templates/vista/index.html
+++ b/final/src/main/resources/templates/vista/index.html
@@ -19,7 +19,9 @@
     </div>
 
     <div class="container-fluid">
-        <h1>Bienvenido a LinkZip!</h1>
+        <div class="container-welcome">
+            <h1 class="mt-5">Bienvenido a LinkZip!</h1>
+        </div>
         <div class="mb-3">
             <form action="/acortar" method="post">
                 <div class="row">
