--- a/final/src/main/resources/templates/vista/reutilizable_fragments.html
+++ b/final/src/main/resources/templates/vista/reutilizable_fragments.html
@@ -13,7 +13,7 @@
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <img src="/images/Logo-with-White.png" alt="logo-LinkZip" class="logo">
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/" class="nav-link px-4 text-warning">Acortador</a></li>
+          <li><a href="/" class="nav-link px-4 text-white">Acortador</a></li>
           <li><a href="/Seguridad/URL/misUrls" class="nav-link px-4 text-white">Mi listado de URLs</a></li>
         </ul>
         <div class="text-end ml-3">
