arreglos y reordenación de funciones

--- a/final/src/main/resources/templates/vista/reutilizable_fragments.html
+++ b/final/src/main/resources/templates/vista/reutilizable_fragments.html
@@ -14,7 +14,14 @@
         <img src="/images/Logo-with-White.png" alt="logo-LinkZip" class="logo">
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="/" class="nav-link px-4 text-white">Acortador</a></li>
-          <li><a href="/Seguridad/URL/misUrls" class="nav-link px-4 text-white">Mi listado de URLs</a></li>
+          <li><a href="/URL/misUrls" class="nav-link px-4 text-white">Mi listado de URLs</a></li>
+          <li>
+            <div th:if="${session.usuario != null}">
+              <div th:if="${session.usuario.isAdmin == true}">
+                <a href="/Usuarios/Listados" class="nav-link px-4 text-white">Listado de Usuarios</a>
+              </div>
+            </div>
+          </li>
         </ul>
         <div class="text-end ml-3">
           <div th:if="${session.usuario == null}">
