--- a/final/src/main/resources/templates/vista/listadoUrls.html
+++ b/final/src/main/resources/templates/vista/listadoUrls.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <header th:include="templates/vista/reutilizable_fragments.html :: header"></header>
+            <header th:insert="~{templates/vista/reutilizable_fragments.html :: header}"></header>
         </div>
 
         <div class="row">
@@ -81,7 +81,7 @@
         </div>
 
         <div class="row">
-            <footer th:include="templates/vista/reutilizable_fragments.html :: footer"></footer>
+            <footer th:insert="~{templates/vista/reutilizable_fragments.html :: footer}"></footer>
         </div>
     </div>
 
