--- a/final/src/main/resources/templates/vista/reutilizable_fragments.html
+++ b/final/src/main/resources/templates/vista/reutilizable_fragments.html
@@ -18,7 +18,7 @@
           <li>
             <div th:if="${session.usuario != null}">
               <div th:if="${session.usuario.isAdmin == true}">
-                <a href="/Usuarios/Listados" class="nav-link px-4 text-white">Listado de Usuarios</a>
+                <a href="/Usuarios/Listado" class="nav-link px-4 text-white">Listado de Usuarios</a>
               </div>
             </div>
           </li>
