--- a/final/src/main/resources/templates/vista/reutilizable_fragments.html
+++ b/final/src/main/resources/templates/vista/reutilizable_fragments.html
@@ -22,6 +22,13 @@
               </div>
             </div>
           </li>
+          <li>
+            <div th:if="${session.usuario != null}">
+              <div th:if="${session.usuario.isAdmin == true}">
+                <a href="/Seguridad/URL/Administrar" class="nav-link px-4 text-white">Administrar URLs</a>
+              </div>
+            </div>
+          </li>
         </ul>
         <div class="text-end ml-3">
           <div th:if="${session.usuario == null}">
