--- a/prac5/src/main/resources/templates/vista/dashboard.html
+++ b/prac5/src/main/resources/templates/vista/dashboard.html
@@ -95,16 +95,43 @@
                         <h1 class="h2">Dashboard administrativo</h1>
                     </div>
 
-                    <div class="col-md-2">
-                        <div class="card">
-                            <div class="card-header">
-                                Cantidad de ventas
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    Cantidad de ventas
+                                </div>
+                                <div class="card-body">
+                                    <span th:text="${cantidadVentas}"></span>
+                                </div>
                             </div>
-                            <div class="card-body">
-                                <span th:text="${cantidadVentas}"></span>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    Productos disponibles
+                                </div>
+                                <div class="card-body">
+                                    <span th:text="${cantidadProductosDisponibles}"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    Usuarios registrados
+                                </div>
+                                <div class="card-body">
+                                    <span th:text="${cantidadUsuarios}"></span>
+                                </div>
                             </div>
                         </div>
                     </div>
+
+
+
 
 
                     <div class="card mt-2">
