Grafico de barras para horas listo

--- a/final/src/main/resources/templates/vista/detalleURL.html
+++ b/final/src/main/resources/templates/vista/detalleURL.html
@@ -28,21 +28,30 @@
 
                     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                            <h1 class="h2">Dashboard</h1>
-                            <div class="btn-toolbar mb-2 mb-md-0">
-                                <div class="btn-group me-2">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-                                </div>
-                                <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar align-text-bottom" aria-hidden="true"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-                                    This week
-                                </button>
-                            </div>
+                            <h1 class="h2">Resumen para URL</h1>
+<!--                            <span th:text="${}"></span>-->
+
                         </div>
 
-                        <canvas class="my-4 w-100" id="myChart" width="959" height="405" style="display: block; box-sizing: border-box; height: 324px; width: 767px;"></canvas>
+                        <canvas id="myFloatingBars"></canvas>
 
+                        <h2 class="mt-5">Tabla de datos</h2>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-sm">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Fecha accedido</th>
+                                    <th scope="col">Veces visitado</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="label, iter1 : ${labels}">
+                                    <td th:text="${label}"></td>
+                                    <td th:text="${data[iter1.count - 1]}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </main>
                 </div>
             </div>
@@ -53,6 +62,38 @@
             <footer th:insert="~{templates/vista/reutilizable_fragments.html :: footer}"></footer>
         </div>
     </div>
+
+    <!-- Incluye los recursos de Chart.js y Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+    <script th:inline="javascript">
+        var ctx = document.getElementById('myFloatingBars').getContext('2d');
+        var labels = /*aquí pasamos la lista como cadena*/ [[${labels}]];
+        var data = /*aquí pasamos la lista como cadena*/ [[${data}]];
+        var backgroundColors = ["#FF6384", "#36A2EB", "#FFCE56", "#8E5EA2", "#3cba9f", "#e8c3b9", "#c45850"];
+        var myFloatingBars = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: labels,
+                datasets: [{
+                    label: "Fechas por URL",
+                    data: data,
+                    backgroundColor: backgroundColors
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    legend: {
+                        position: 'top',
+                    },
+                    title: {
+                        display: true,
+                        text: 'Fechas acceso por URL'
+                    }
+                }
+            }
+        });
+    </script>
 
 </body>
 </html>
