--- a/final/src/main/resources/templates/vista/listadoUrls.html
+++ b/final/src/main/resources/templates/vista/listadoUrls.html
@@ -35,7 +35,7 @@
                             <th scope="col"> Cliente del usuario </th>
                             <th scope="col"> Direccion IP </th>
                             <th scope="col"> QR Code </th>
-                            <th scope="col"> Estadisticas </th>
+                            <th scope="col"> Resumen </th>
                         </tr>
                         </thead>
                         <tbody>
@@ -51,7 +51,7 @@
 
                             </td>
                             <td>
-                                <a th:href="'/Seguridad/URL/' + ${url.idAcortador}">Ver mas</a>
+                                <a th:href="'/Seguridad/URL/' + ${url.idAcortador}">Estadisticas</a>
                             </td>
                         </tr>
                         </tbody>
